force-app/main/default/objects/TCP_CIPM_Settings__mdt/TCP_CIPM_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to maintain settings related to CIPM configurations</description>
    <label>TCP_CIPM_Settings</label>
    <pluralLabel>TCP_CIPM_Settings</pluralLabel>
</CustomObject>