force-app/main/default/objects/TCP_CIPM_Settings__mdt/fields/Access_type__c.field-meta.xml
<CustomField>
    <fullName>Access_type__c</fullName>
    <label>Access type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>