force-app/main/default/objects/TCP_CIPM_Settings__mdt/fields/Auth_type__c.field-meta.xml
<CustomField>
    <fullName>Auth_type__c</fullName>
    <label>Auth type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>