force-app/main/default/objects/TCP_CIPM_Settings__mdt/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <label>BaseURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>