force-app/main/default/objects/TCP_CIPM_Settings__mdt/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>