force-app/main/default/objects/TCP_CIPM_Settings__mdt/fields/Grant_type__c.field-meta.xml
<CustomField>
    <fullName>Grant_type__c</fullName>
    <label>Grant type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>