force-app/main/default/objects/TCP_CIPM_Settings__mdt/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>