force-app/main/default/objects/TCP_CIPM_Settings__mdt/fields/Response_type__c.field-meta.xml
<CustomField>
    <fullName>Response_type__c</fullName>
    <label>Response type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>